# rust-esp32-cam

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  platformio.ini  sdkconfig.defaults
.cargo/: config.toml
src/: dummy.c  lib.rs
